@@ -41,6 +41,7 @@ Improvements::
 
 Bug Fixes::
 
+* ensure color spaces are set on page before adding running content (#2477)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
